完成了图片以及视频的删除开发
